fixes #16956. Fix flickering with iOS6 by using an iOS6-specific way to enable hardware acceleration.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@31198 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/iphone/ListItem.less
+++ b/mobile/themes/iphone/ListItem.less
@@ -9,4 +9,9 @@
 		color: #385487;
 		font-weight: normal;
 	}
+	
+	.mblListItem {
+		/* enables hardware acc. to avoid flickering issues - see #16956 */
+		-webkit-perspective: 1000;
+	}
 }
